--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "html-webpack-plugin": "latest",
     "path-browserify": "latest",
     "pug-loader": "latest",
-    "pug-plugin": "^2.0.1",
+    "pug-plugin": "latest",
     "purgecss-webpack-plugin": "^4.1.3",
     "tty-browserify": "latest",
     "webpack": "latest",
